# animated-octo-tribble

./: 2697.lexicographically-smallest-palindrome.cpp  2824.count-pairs-whose-sum-is-less-than-target.cpp  344.reverse-string.cpp  821.shortest-distance-to-a-character.cpp  LCR 140.训练计划-ii.cpp  README.md
.lcpr_data/: bricks.json
chassis_protocol/: CHANGELOG.md  CMakeLists.txt  README.md  README.zh-CN.md  package.xml
chassis_protocol/chassis/: chassis_hal.cpp  chassis_hal.hpp  ichassis_controller.hpp  version_negotiator.cpp  version_negotiator.hpp
chassis_protocol/chassis/differential/: differential_controller.cpp  differential_controller.hpp
chassis_protocol/chassis/mecanum/: mecanum_controller.cpp  mecanum_controller.hpp
chassis_protocol/docs/design/: 00_index.md  03_transport.md  06_controllers.md  07_ros2_adapter.md
chassis_protocol/frame/: frame_codec.cpp  frame_codec.hpp
chassis_protocol/proto/: chassis.proto
chassis_protocol/ros2_adapter/: chassis_node.cpp  chassis_node.hpp  chassis_node_main.cpp
chassis_protocol/tests/: frame_codec_test.cpp  transport_mock_test.cpp
chassis_protocol/tests/fixtures/: README.md
chassis_protocol/transport/: itransport.cpp  itransport.hpp  rs485_transport.cpp  rs485_transport.hpp  tcp_transport.cpp  tcp_transport.hpp  udp_transport.cpp  udp_transport.hpp
docs/: README.md  ROS2_RESEARCH_INDEX.md  plan.md
docs/embodied-ai/llm_vla_ros2_integration/: 00_index.md  01_task_hierarchy.md  02_vla_output_formats.md  03_rai_llm_agent.md  04_ros2_llm_observability.md  05_isaac_manipulator_groot.md  06_inference_deployment.md  07_data_flywheel.md  08_integration.md
docs/embodied_ai_industry_research/: 01_概述与定义.md  02_技术体系与架构.md  03_硬件形态.md  04_核心技术栈.md  05_产业链分析.md  06_重点企业与机构.md  07_应用场景.md  08_数据集与仿真基础设施.md  09_投融资与市场规模.md  10_政策环境.md  11_关键挑战与风险.md  12_趋势预判与展望.md  README.md
docs/hal_comparative_analysis/: 01-架构与类层次对比.md  03-传感器与Profile管理对比.md  04-数据流与帧回调机制对比.md  05-参数系统对比.md  06-图像解码与格式转换对比.md  07-深度后处理滤波器对比.md  08-IMU数据处理对比.md  10-TF与外参标定对比.md  12-Launch与配置系统对比.md  14-特色功能对比.md
docs/orbbec_sdk_ros2_analysis/: 02-核心类分析.md  04-ROS2-Service接口分析.md  06-设备管理与生命周期.md  09-多相机与同步机制.md  10-硬件抽象层设计建议.md  11-消息与服务定义.md  13-SDK接口封装层分析.md  14-LiDAR节点分析.md
docs/projects/chassis_protocol/: 01_architecture.md  02_frame_codec.md  04_version_negotiator.md  05_chassis_hal.md  08_data_flows.md
docs/realsense-ros-4.57.7-analysis/: 01-仓库结构分析.md  06-数据流与帧回调机制.md  09-滤波器Pipeline.md  README.md
docs/ros2-core/ros2_clock_time_research/: 02_sim_time.md  05_summary.md
docs/ros2-core/ros2_component_research/: 01_overview.md  03_executor_and_scheduling.md  05_summary_and_cheatsheet.md  README.md
docs/ros2-core/ros2_launch_system_research/: 02_actions.md  05_summary.md  README.md
docs/ros2-core/ros2_lifecycle_node_research/: 02_state_machine.md
docs/ros2-core/ros2_parameter_system_research/: 04_dynamic_callback.md  README.md
docs/ros2_clock_time_research/: 01_overview.md  03_timer.md  04_duration.md  README.md
docs/ros2_component_research/: 02_component_manager_source.md  04_lifecycle_and_launch.md
docs/ros2_custom_fork_roadmap/: 01_motivation_and_baseline.md  02_optimization_dimensions.md  03_phase1_config_tuning.md  04_phase2_rclcpp_executor.md  05_phase3_rmw_zero_copy.md  08_phase6_rt_and_kernel.md  README.md
docs/ros2_launch_system_research/: 01_overview.md  03_events.md  04_substitutions.md
docs/ros2_lifecycle_node_research/: 01_overview.md  05_summary.md  README.md
docs/ros2_parameter_system_research/: 01_overview.md  02_parameter_service.md  03_declare_and_get.md  05_summary.md
docs/ros2_qos_research/: 01_qos_policies.md  03_presets_and_events.md  README.md
docs/ros2_rcl_research/: 03_node_and_entities.md  04_wait_and_executor.md  05_summary.md
docs/ros2_rclcpp_core_research/: 01_overview.md  03_publisher_subscription.md  04_callback_and_executor.md
docs/ros2_service_action_research/: 01_service_overview.md  03_action_overview.md
docs/ros2_service_discovery_research/: 01_overview_and_dds.md  02_rcl_rmw_source.md
docs/ros2_tf2_research/: 01_overview.md  02_buffer_core.md  README.md
docs/ros2_topic_communication_research/: 01_overview.md  04_serialization.md  06_intra_process.md  09_shm_transport.md  README.md
(+153 files in other folders)
